# fetch-artifacts

./: README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
fetch_artifacts/: __init__.py  _compat.py  artifacts.py  create.py  utils.py
tests/: test_archive.py  test_artifacts.py  test_bind_unbind.py  test_coverage_improvements.py  test_create_advanced.py  test_download.py  test_hashing.py  test_toml_parsing.py
