[tool.poetry]
name = "fetch-artifacts"
version = "0.1.0"
description = "Julia-style Artifacts system for Python - TOML-based artifact management with automatic downloading and caching"
authors = ["Marco Bonici <bonici.marco@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/CosmologicalEmulators/fetch-artifacts"
repository = "https://github.com/CosmologicalEmulators/fetch-artifacts"
documentation = "https://github.com/CosmologicalEmulators/fetch-artifacts"
packages = [{include = "fetch_artifacts"}]
keywords = [
    "artifacts",
    "data",
    "download",
    "cache",
    "reproducible",
    "scientific",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
tomlkit = "^0.12.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
